fixes overlapping in FF

--- a/kahuna/public/stylesheets/main.css
+++ b/kahuna/public/stylesheets/main.css
@@ -2142,6 +2142,7 @@
     }
 
     .easel__image {
+        float: left;
         max-width: 100%;
         max-height: 500px;
     }
